--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <!--Menú -->
-    <nav class="menu">
+    <nav class="menu container-fluid">
         <div class="logo">
             <img src="./img/LogoLJAG.png" alt="Logo Lubrillantas Jezreel AG"/>
         </div>
@@ -47,7 +47,7 @@
     <!--Fin Menú -->
 
     <!--Carrusel-->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade m-0" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/header.jpeg" class="d-inline-block m-0 h-auto w-100" alt="..." style="filter:brightness(30%)">
@@ -111,6 +111,36 @@
       </div>
       <!--Fin sobre nosotros-->
 
+      <!--FOOTER-->
+      <footer>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              Redes sociales
+            </div>
+          </div>
+          <div class="row">
+            <div class="col logo col-sm-auto col-md-auto col-lg-4">
+              <img src="img/LogoLJAG.png" alt="Logo Jezreel">
+            </div>
+            <div class="col text-center col-sm-auto col-md-auto col-lg-4">
+              <div class="row"><h3>HORARIOS DE ATENCIÓN</h3></div>
+              <div class="row"><h4>Lunes a Viernes</h4></div>
+              <div class="row"><h4>7:30 am a 6:00 pm</h4></div>
+              <div class="row"><h4>Sabado</h4></div>
+              <div class="row"><h4>7:30 am a 5:00 pm</h4></div>
+            </div>
+            <div class="col text-center col-sm-auto col-md-auto col-lg-4">
+              <div class="row"><h3>CONTACTO</h3></div>
+              <div class="row"><h4>Av 5 # 0N-54 Barrio La Merced</h4></div>
+              <div class="row"><h4>San José de Cúcuta - Colombia</h4></div>
+              <div class="row"><h4>albeirofonseca74@gmail.com</h4></div>
+              <div class="row"><h4>+57 3112810082</h4></div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!--FIN FOOTER-->
     <!--Link del boostrap-->
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
