--- a/index.html
+++ b/index.html
@@ -9,45 +9,72 @@
     <!-- Fuente de google: Open Sans - Regular 400 -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-    <!--Icono para el menú cuando sea desplegable (dispositivos móviles)-->
-    <script src="https://kit.fontawesome.com/624c79f848.js" crossorigin="anonymous"></script>
-
     <!--Importar CSS y script del menú -->
     <link rel="stylesheet" href="./css/menu.css"/>
-    <script src="./js/menu.js" defer></script> 
-    <!--Atributo defer: Para que cargue después de nuestro contenido html-->
 
     <!--Link del boostrap-->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </head>
 <body>
     <!--Menú -->
-    <nav class="menu container-fluid">
-        <div class="logo">
-            <img src="./img/LogoLJAG.png" alt="Logo Lubrillantas Jezreel AG"/>
-        </div>
-
-        <ul class="items-menu mostrar">
-            <li class="activo"><a href="#">INICIO</a></li> <!--La clase activo será para resaltar la opción que se seleccionoó en el menú-->
-            <li><a href="#">NOSOTROS</a></li>
-            <li><a href="#">SERVICIOS</a></li>
-            <li><a href="#">PRODUCTOS</a></li>
-            <li><a href="#">INICIAR SESION</a></li>
-            <li><a href="#">REGISTRARSE</a></li>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
+      <div class="container-fluid">
+  
+        <a class="navbar-brand" href="#">
+          <img src="../img/LogoLJAG.png" alt="" width="140px" height="140px"/>
+        </a>
+  
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">SERVICIOS</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">PRODUCTOS</a>
+          </li>
         </ul>
-        <!--Mostrar el boton menú para móviles-->
-        <span class="btn-menu">
-            <!-- Muestra el icono con el script importado en el head-->
-            <i class="fas fa-bars"></i>
-        </span>
+  
+        <ul class="navbar-nav ml-auto m-4">
+          <li class="nav-item">
+            <a class="nav-link" href="#">INICIAR SESIÓN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./html/registrarse.html">REGISTRARSE</a>
+          </li>
+        </ul>
+  
+        <!-- <li class="nav-item dropdown" style="list-style-type: none;">
+          <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li> -->
+  
+        </div>
+      </div>
     </nav>
     <!--Fin Menú -->
 
     <!--Carrusel-->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade m-0" data-bs-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/header.jpeg" class="d-inline-block m-0 h-auto w-100" alt="..." style="filter:brightness(30%)">
@@ -141,9 +168,5 @@
         </div>
       </footer>
       <!--FIN FOOTER-->
-    <!--Link del boostrap-->
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-
 </body>
 </html>
