--- a/html/registarse.html
+++ b/html/registarse.html
@@ -22,6 +22,7 @@
 	<!-- Inicio menú-->
 	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
 		<div class="container-fluid">
+			<div></div>
 
 			<a class="navbar-brand" href="#">
 				<img src="../img/LogoLJAG.png" alt="" width="140px" height="140px"/>
