--- a/html/registarse.html
+++ b/html/registarse.html
@@ -100,6 +100,7 @@
 				</p>
 		<p>El telefono solo puede contener numeros y el maximo son 14
 		dígitos.</p>
+		<div></div>
 	</div>
 	<div id="grupo__correo" dir="ltr"><p style="margin-bottom: 0in">Correo
 		Electrónico 
