--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!--Importar CSS y script del menú -->
     <link rel="stylesheet" href="./css/menu.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
 
     <!--Link del boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -23,7 +24,7 @@
       <div class="container-fluid">
   
         <a class="navbar-brand" href="#">
-          <img src="../img/LogoLJAG.png" alt="" width="140px" height="140px"/>
+          <img src="../img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
         </a>
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,30 +75,30 @@
     <!--Fin Menú -->
 
     <!--Carrusel-->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade " data-bs-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade d-flex" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/header.jpeg" class="d-inline-block m-0 h-auto w-100" alt="..." style="filter:brightness(30%)">
+            <img src="img/header.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
             <div class="row">
-              <div class="col-12">
-                <div class="carousel-caption d-flex flex-column justify-content-center h-100 txt-carousel">
-                  <h1 class="tittle-carrusel">Lubrillantas <p style="color: blue; display: inline;">Jezreel</p> AG</h1>
+              <div class="col-12 justify-content-center">
+                <div class="carousel-caption d-flex flex-column justify-content-center h-100 txt-carousel ">
+                  <h1 class="tittle-carrusel" >Lubrillantas <p style="color: blue; display: inline;">Jezreel</p> AG</h1>
                 </div>
-                <div class="carousel-caption d-flex flex-column  h-100 " style="top: 35rem;">
-                  <button type="button" style="background:blue; margin-left: 40%; margin-right: 40%; height: 3em; color:#FFF; font-size: 30px; font-weight:bold; border-radius: 10px;" class="btn">Agendar Servicio</button>
+                <div class="carousel-caption d-flex flex-column contBtn" ">
+                  <button type="button" class="btnAgendar" >Agendar Servicio</button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/header_2.jpeg" class="d-inline-block m-0 h-auto w-100" alt="..." style="filter:brightness(30%)">
+          <div class="carousel-item d-flex">
+            <img src="img/header_2.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
             <div class="row">
               <div class="col-12">
                 <div class="carousel-caption d-flex flex-column justify-content-center h-100 txt-carousel">
-                  <h1  class="tittle-carrusel">Lubrillantas <p style="color: blue; display: inline;">Jezreel</p> AG</h1>
+                  <h1  class="tittle-carrusel ">Lubrillantas <p style="color: blue; display: inline;">Jezreel</p> AG</h1>
                 </div>
-               <div class="carousel-caption d-flex flex-column  h-100" style="top: 35rem;">
-                  <button type="button" style="background:blue; margin-left: 40%; margin-right: 40%; height: 3em; color:#FFF; font-size: 30px; font-weight:bold; border-radius: 10px;" class="btn">Agendar Servicio</button>
+               <div class="carousel-caption d-flex flex-column contBtn">
+                  <button type="button" class="btnAgendar">Agendar Servicio</button>
                 </div>
               </div>
               
@@ -105,14 +106,6 @@
             
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
       <!--Fin de carrusel-->
 
@@ -148,7 +141,7 @@
           </div>
           <div class="row">
             <div class="col logo col-sm-auto col-md-auto col-lg-4">
-              <img src="img/LogoLJAG.png" alt="Logo Jezreel">
+              <img src="img/LogoLJAG.png" alt="Logo Jezreel" style="height: 50px;">
             </div>
             <div class="col text-center col-sm-auto col-md-auto col-lg-4">
               <div class="row"><h3>HORARIOS DE ATENCIÓN</h3></div>
