--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-              Redes sociales
+              Redes Sociales
             </div>
           </div>
           <div class="row">
