--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container-fluid">
   
         <a class="navbar-brand" href="#">
-          <img src="./../img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
+          <img src="https://github.com/JohnnyQuintero16/aplicativoWebLubrillantasJezreelAg/blob/Frontend/img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
         </a>
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
