1. Correción y se añade de rutas entre páginas index-servicios-productos-registrarse.  2. Se redujo el alto del menú, disminuyendo el tamaño de el logo.  3. Solución al mensaje de error: Llena corectamente el formulario... del registro, ya se adapta a dispositivos móviles.  4. La imagen de fondo del registro se mejoró, ya se evita que se mueva al subir y bajar el scroll, quedo con una posición fija.  5. En registro, el mensaje de error por cada uno de los input se separó con un margin top para que no se vieran tan pegados.

--- a/web/html/productos.html
+++ b/web/html/productos.html
@@ -22,13 +22,11 @@
 
 
 	<!-- Inicio menú-->
-
-	
 	<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
 		<div class="container-fluid">
 
 			<a class="navbar-brand" href="#">
-				<img src="../img/LogoLJAG.png" alt="" width="140px" height="140px"/>
+				<img src="../img/LogoLJAG.png" alt="" width="100px" height="100px"/>
 			</a>
 
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +43,7 @@
 				<a class="nav-link" href="#">NOSOTROS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="servicios.html">SERVICIOS</a>
+				<a class="nav-link" href="./servicios.html">SERVICIOS</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link active" aria-current="page"href="#">PRODUCTOS</a>
@@ -57,7 +55,7 @@
 					<a class="nav-link" href="#">INICIAR SESIÓN</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">REGISTRARSE</a>
+					<a class="nav-link" href="./registrarse.html">REGISTRARSE</a>
 				</li>
 			</ul>
 
@@ -66,7 +64,6 @@
 	</nav>
 	<!-- Fin menú -->
 	
-
 
 <section class="contenido">
     <div class="container-all">
