--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -28,7 +28,7 @@
 		<div class="container-fluid">
 
 			<a class="navbar-brand" href="#">
-				<img src="../img/LogoLJAG.png" alt="" width="140px" height="140px"/>
+				<img src="../img/LogoLJAG.png" alt="" width="100px" height="100px"/>
 			</a>
 
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
 				<a class="nav-link active" aria-current="page" href="#">SERVICIOS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="productos.html">PRODUCTOS</a>
+				<a class="nav-link" href="./productos.html">PRODUCTOS</a>
 			  </li>
 			</ul>
 
@@ -57,7 +57,7 @@
 					<a class="nav-link" href="#">INICIAR SESIÓN</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">REGISTRARSE</a>
+					<a class="nav-link" href="./registrarse.html">REGISTRARSE</a>
 				</li>
 			</ul>
 
