--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
       <div class="container-fluid">
   
         <a class="navbar-brand" href="#">
-          <img src="../img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
+          <img src="./img/LogoLJAG.png" alt="" width="100px" height="100px"/>
         </a>
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +41,10 @@
           <a class="nav-link" href="#">NOSOTROS</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">SERVICIOS</a>
+          <a class="nav-link" href="./html/servicios.html">SERVICIOS</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link" href="#">PRODUCTOS</a>
+          <a class="nav-link" href="./html/productos.html">PRODUCTOS</a>
           </li>
         </ul>
   
