--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!--Importar CSS y script del menú -->
-    <link rel="stylesheet" href="./css/menu.css"/>
-    <link rel="stylesheet" href="./css/index.css"/>
+    <link rel="stylesheet" href="./web/css/menu.css"/>
+    <link rel="stylesheet" href="./web/css/index.css"/>
 
     <!--Link del boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,7 +24,7 @@
       <div class="container-fluid">
   
         <a class="navbar-brand" href="#">
-          <img src="../img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
+          <img src="./web/img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
         </a>
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade d-flex" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/header.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
+            <img src="./web/img/header.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
             <div class="row">
               <div class="col-12 justify-content-center">
                 <div class="carousel-caption d-flex flex-column justify-content-center h-100 txt-carousel ">
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="carousel-item d-flex">
-            <img src="img/header_2.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
+            <img src="./web/img/header_2.jpeg" class="d-inline-block m-0 h-80 w-100" alt="..." style="filter:brightness(25%)">
             <div class="row">
               <div class="col-12">
                 <div class="carousel-caption d-flex flex-column justify-content-center h-100 txt-carousel">
@@ -114,7 +114,7 @@
       <!--Sobre nosotros-->
       <div class="row">
         <div class="col">
-          <img src="img/home.jpeg" alt="" id = "imgNosotros">
+          <img src="./web/img/home.jpeg" alt="" id = "imgNosotros">
         </div>
         <div class="col" style="margin-top: 7%;">
           <div class="row">
@@ -133,35 +133,43 @@
       </div>
       <!--Fin sobre nosotros-->
 
-      <!--FOOTER-->
-      <footer>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12">
-              Redes Sociales
-            </div>
-          </div>
-          <div class="row">
-            <div class="col logo col-sm-auto col-md-auto col-lg-4">
-              <img src="img/LogoLJAG.png" alt="Logo Jezreel" style="height: 50px;">
-            </div>
-            <div class="col text-center col-sm-auto col-md-auto col-lg-4">
-              <div class="row"><h3>HORARIOS DE ATENCIÓN</h3></div>
-              <div class="row"><h4>Lunes a Viernes</h4></div>
-              <div class="row"><h4>7:30 am a 6:00 pm</h4></div>
-              <div class="row"><h4>Sabado</h4></div>
-              <div class="row"><h4>7:30 am a 5:00 pm</h4></div>
-            </div>
-            <div class="col text-center col-sm-auto col-md-auto col-lg-4">
-              <div class="row"><h3>CONTACTO</h3></div>
-              <div class="row"><h4>Av 5 # 0N-54 Barrio La Merced</h4></div>
-              <div class="row"><h4>San José de Cúcuta - Colombia</h4></div>
-              <div class="row"><h4>albeirofonseca74@gmail.com</h4></div>
-              <div class="row"><h4>+57 3112810082</h4></div>
-            </div>
-          </div>
+  <!--FOOTER-->
+  <footer>
+    <div class="container-fluid">
+      <div class="row ">
+        <div class="col-12 redes" style="background-color: #00114e;">
+          <img src="./web/img/whatsapp.png" >
+          <img src="./web/img/facebook.png" >
+          <img src="./web/img/instagram.png" >
+          <img src="./web/img/twitter.png" >
         </div>
-      </footer>
-      <!--FIN FOOTER-->
+      </div>
+      <div class="row" style="background-color: #001971;">
+
+        <div class="col col-sm-auto col-md-auto col-lg-4">
+          <img src="./web/img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
+        </div>
+
+        <div class="col  col-sm-auto col-md-auto col-lg-4 horario" >
+          <h4 >HORARIOS DE ATENCIÓN</h4>
+          <p>Lunes a Viernes</p>
+          <p>7:30 AM a 6:00 PM</p>
+          <p>Sábado</p>
+          <p>7:30 AM a 5:00 PM</p>
+        </div>
+
+        <div class="col  col-sm-auto col-md-auto col-lg-4 footer-contacto" >
+          <h4 > CONTACTO </h4>
+          <P>Av 5 # 0N-54 Barrio La Merced</P>
+          <p>San José de Cúcuta - Colombia</p>
+          <p>albeirofonseca74@gmail.com</p>
+          <p>+57 3112810082</p>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+  <!--FIN FOOTER-->
+ 
 </body>
 </html>
