1. Vista inicio de sesion con validaciones, 2. Nuevas rutas que redireccionan a iniciarsesion desde index-servicios-productos-registrarse.

--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -54,7 +54,7 @@
 
 			<ul class="navbar-nav ml-auto m-4">
 				<li class="nav-item">
-					<a class="nav-link" href="#">INICIAR SESIÓN</a>
+					<a class="nav-link" href="./iniciarsesion.html">INICIAR SESIÓN</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="./registrarse.html">REGISTRARSE</a>
