--- a/web/html/productos.html
+++ b/web/html/productos.html
@@ -299,15 +299,44 @@
 	</div>
 
 
-     <section class="contenido">
+  <!--FOOTER-->
+  <footer>
+    <div class="container-fluid">
+      <div class="row ">
+        <div class="col-12 redes" style="background-color: #00114e;">
+          <img src="./img/whatsapp.png" >
+          <img src="./img/facebook.png" >
+          <img src="./img/instagram.png" >
+          <img src="./img/twitter.png" >
+        </div>
+      </div>
+      <div class="row" style="background-color: #001971;">
 
-		<h1>HOLA MUNDO  FASFGASDFSDFSDFASDFASDF
-			A DFSDFSDFSDFSDFSDF
-		</h1>
+        <div class="col col-sm-auto col-md-auto col-lg-4">
+          <img src="./img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
+        </div>
 
-	 </section>
+        <div class="col  col-sm-auto col-md-auto col-lg-4 horario" >
+          <h4 >HORARIOS DE ATENCIÓN</h4>
+          <p>Lunes a Viernes</p>
+          <p>7:30 AM a 6:00 PM</p>
+          <p>Sábado</p>
+          <p>7:30 AM a 5:00 PM</p>
+        </div>
 
-  
+        <div class="col  col-sm-auto col-md-auto col-lg-4 footer-contacto" >
+          <h4 > CONTACTO </h4>
+          <P>Av 5 # 0N-54 Barrio La Merced</P>
+          <p>San José de Cúcuta - Colombia</p>
+          <p>albeirofonseca74@gmail.com</p>
+          <p>+57 3112810082</p>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+  <!--FIN FOOTER-->
+ 
 	    
     
 </body>
