Rutas imagenes del footer corregidas.

--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -15,6 +15,7 @@
 	<!--Importar CSS -->
     <link rel="stylesheet" href="../css/menu.css"/> 
     <link rel="stylesheet" href="../css/servicios.css"/>
+	<link rel="stylesheet" href="../css/index.css"/>
     
 
 </head>
@@ -267,16 +268,16 @@
     <div class="container-fluid">
       <div class="row ">
         <div class="col-12 redes" style="background-color: #00114e;">
-          <img src="./img/whatsapp.png" >
-          <img src="./img/facebook.png" >
-          <img src="./img/instagram.png" >
-          <img src="./img/twitter.png" >
+          <img src="../img/whatsapp.png" >
+          <img src="../img/facebook.png" >
+          <img src="../img/instagram.png" >
+          <img src="../img/twitter.png" >
         </div>
       </div>
       <div class="row" style="background-color: #001971;">
 
         <div class="col col-sm-auto col-md-auto col-lg-4">
-          <img src="./img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
+          <img src="../img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
         </div>
 
         <div class="col  col-sm-auto col-md-auto col-lg-4 horario" >
