--- a/web/html/iniciarsesion.html
+++ b/web/html/iniciarsesion.html
@@ -20,6 +20,7 @@
     <!--Importar CSS -->
     <link rel="stylesheet" href="../css/menu.css"/>
     <link rel="stylesheet" href="../css/iniciarsesion.css">
+    <link rel="stylesheet" href="../css/index.css"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
@@ -115,16 +116,16 @@
     <div class="container-fluid">
       <div class="row ">
         <div class="col-12 redes" style="background-color: #00114e;">
-          <img src="./img/whatsapp.png" >
-          <img src="./img/facebook.png" >
-          <img src="./img/instagram.png" >
-          <img src="./img/twitter.png" >
+          <img src="../img/whatsapp.png" >
+          <img src="../img/facebook.png" >
+          <img src="../img/instagram.png" >
+          <img src="../img/twitter.png" >
         </div>
       </div>
       <div class="row" style="background-color: #001971;">
 
         <div class="col col-sm-auto col-md-auto col-lg-4">
-          <img src="./img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
+          <img src="../img/LogoLJAG.png" alt="Logo Jezreel" id="imgFooter">
         </div>
 
         <div class="col  col-sm-auto col-md-auto col-lg-4 horario" >
