Correccion de muchos errores

--- a/web/html/iniciarsesion.html
+++ b/web/html/iniciarsesion.html
@@ -20,7 +20,7 @@
     <!--Importar CSS -->
     <link rel="stylesheet" href="../css/menu.css"/>
     <link rel="stylesheet" href="../css/iniciarsesion.css">
-    <link rel="stylesheet" href="../css/index.css"/>
+    <link rel="stylesheet" href="../css/footer.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
