--- a/web/html/registrarse.html
+++ b/web/html/registrarse.html
@@ -19,7 +19,7 @@
 	<!--Importar CSS -->
     <link rel="stylesheet" href="../css/menu.css"/>
     <link rel="stylesheet" href="../css/formulario.css"/>
-	<link rel="stylesheet" href="../css/index.css"/>
+	<link rel="stylesheet" href="../css/footer.css">
     
 
 </head>
