--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -15,7 +15,7 @@
 	<!--Importar CSS -->
     <link rel="stylesheet" href="../css/menu.css"/> 
     <link rel="stylesheet" href="../css/servicios.css"/>
-	<link rel="stylesheet" href="../css/index.css"/>
+	<link rel="stylesheet" href="../css/footer.css">
     
 
 </head>
@@ -29,7 +29,7 @@
 		<div class="container-fluid">
 
 			<a class="navbar-brand" href="#">
-				<img src="../img/LogoLJAG.png" alt="" width="100px" height="100px"/>
+				<img src="../img/LogoLJAG.png" alt="" width="140px" height="120px"/>
 			</a>
 
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
