--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,10 @@
     <!--Importar CSS y script del menú -->
     <link rel="stylesheet" href="./css/menu.css"/>
     <link rel="stylesheet" href="./css/index.css"/>
-    <link rel="stylesheet" href="./css/productos.css"/>
+
+    <link rel="stylesheet" href="./css/footer.css">
+ 
+    
 
     <!--Link del boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,7 +28,7 @@
       <div class="container-fluid">
   
         <a class="navbar-brand" href="#">
-          <img src="./img/LogoLJAG.png" alt="" width="140px" height="120px" style="margin: -20px;"/>
+          <img src="./img/LogoLJAG.png" alt="" width="140px" height="120px" />
         </a>
   
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +61,7 @@
           </li>
         </ul>
   
-        </ul>
+       <!--  </ul> -->
   
         <!-- <li class="nav-item dropdown" style="list-style-type: none;">
           <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -147,7 +150,7 @@
       <!--Fin de carrusel-->
 
       <!--Sobre nosotros-->
-      <div class="row">
+      <!--  <div class="row">
         <div class="col">
           <img src="./img/home.jpeg" alt="" id = "imgNosotros">
         </div>
@@ -165,7 +168,7 @@
           </div>
           <button type="button" id ="btnLeermas">Leer más</button>
         </div>
-      </div>
+      </div>  -->
       <!--Fin sobre nosotros-->
 
   <!--FOOTER-->
