--- a/web/html/registrarse.html
+++ b/web/html/registrarse.html
@@ -93,7 +93,7 @@
                 <h2>1.  Datos personales</h2>
                 <br>
             </div>
-            <form action="" class="formulario" id="formulario">
+            <form action="../Registro.do" class="formulario" id="formulario">
             <!--Grupo: Nombre -->
 			<div class="formulario__grupo" id="grupo__nombre">
 				<label for="nombre" class="formulario__label">Nombres</label>
@@ -186,9 +186,10 @@
 					Acepto los Terminos y Condiciones
 				</label>
 			</div>
-
+                       
 			<div class="formulario__mensaje" id="formulario__mensaje">
-				<p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
+				 <div>
+                                     <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
 
 					<input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="4491234567">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -207,7 +208,7 @@
 
 			</div>
 
-            <div class="formulario__grupo formulario__grupo-btn-enviar">
+                        <div class="formulario__grupo formulario__grupo-btn-enviar">
 				<button type="submit" class="formulario__btn">Continuar</button>
 				<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
 			</div>
@@ -217,7 +218,7 @@
         <!-- Fin formulario-->
     </main>
 
-    <script src="../js/formulario.js""></script>
+    <script src="../js/formulario.js"></script>
 	<!-- Enlace a los iconos que se trabajan. -->
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
