Se arreglo el Index y más correcciones

--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -163,7 +163,7 @@
 			
 				<div class="row g-0 ">
 					<div class="col-md-5">
-					  <img src="https://www.autocentroguzman.com/site_imagenes/img_recursos/servicios/Frenos-Suspencion.jpg" class="img-fluid rounded-start" alt="...">
+					  <img src="https://i.blogs.es/f21c04/frenos-coche/450_1000.jpg" class="img-fluid rounded-start" alt="...">
 					</div>
 					<div class="col-md-7 mt-4">
 					  
@@ -205,11 +205,8 @@
 
 		<div class="col-md-2"></div>
 		<div class="col-md-8"> 		
-			<input class="boton" id="botonAgendar" type="button" value="Agendar Servicio"
-                  onclick="location.href=''">
-              </div>
-		
-		</div>
+			<input class="boton" id="botonAgendar" type="button" value="Agendar Servicio" onclick="location.href='iniciarsesion.html'">
+         </div>
 		<div class="col-md-2"></div>
 	 </section>
 
