--- a/web/html/servicios.html
+++ b/web/html/servicios.html
@@ -58,7 +58,7 @@
 					<a class="nav-link" href="./iniciarsesion.html">INICIAR SESIÓN</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./registrarse.html">REGISTRARSE</a>
+					<a class="nav-link" href="./registrarse.jsp">REGISTRARSE</a>
 				</li>
 			</ul>
 
