--- a/web/index.html
+++ b/web/index.html
@@ -59,8 +59,8 @@
           <li class="nav-item">
             <a class="nav-link" href="./html/iniciarsesion.html">INICIAR SESIÓN</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./html/registrarse.html">REGISTRARSE</a>
+          <li>
+            <a href="html/registrarse.jsp" class="nav-link"> REGISTRARSE</a>
           </li>
         </ul>
   
